kubernetes/main/apps/security/authentik/app/internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-internal
  namespace: security
spec:
  ingressClassName: internal
  rules:
    - host: &host sso.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: authentik-server
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
