kubernetes/main/apps/security/authentik/app/webfinger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-webfinger
  namespace: security
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  ingressClassName: external
  rules:
    - host: &host ${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: authentik-server
                port:
                  number: 80
            path: /.well-known/webfinger
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - *host
